更新 .gitignore 文件以忽略 .env 文件； 在 package.json 中添加更新github star的脚本； 在 SearchBar 组件中添加移动端适配； 在 ServerCard 组件中优化样式； 在 Home 页面中添加服务器排序功能； 更新server数据中的 GitHub Star number

--- a/client/src/locale/en.json
+++ b/client/src/locale/en.json
@@ -38,7 +38,12 @@
     "recommendedServers": "Recommended Servers",
     "otherServers": "Other Servers",
     "loadMore": "Load More",
-    "of": "of"
+    "of": "of",
+    "sort": {
+      "defaultOrder": "Default Order",
+      "byStarsDesc": "Stars ↓ (High to Low)",
+      "byStarsAsc": "Stars ↑ (Low to High)"
+    }
   },
   "server": {
     "by": "by",
